# BUAA-Compiler-2020

./: .gitignore  ActiveOptimize.cpp  CMakeLists.txt  ErrorHandle.cpp  GrammarAnalyzer.cpp  Grammer.md  IRCodeManager.cpp  Lexer.cpp  MipsTranslator.cpp  README.md  SymbolTable.cpp  main.cpp  output.txt  testfile.txt
include/: ActiveOptimize.h  ErrorHandle.h  GrammarAnalyzer.h  IRCodeManager.h  Lexer.h  MipsTranslator.h  SymbolTable.h  typeList.h
lib/: typeList.h
